[tool.poetry]
name = "flaskusercontrol"
version = "0.1.0"
description = ""
authors = ["Anhelina Sadvari <sadvari.anhelina@student.uzhnu.edu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flasgger = "^0.9.7.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
flask-jwt-extended = "^4.7.1"
flask-bcrypt = "^1.0.1"
gunicorn = "^23.0.0"
flask-migrate = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
